# engine-core

./: CMakeLists.txt  build.bat
cmake/: libraries.cmake
include/: matrix.h  mesh.h  raycast.h  vectorN.h  window.h
src/: mesh.cpp  program.cpp  window.cpp
src/imgui/: imgui_impl_bgfx.cpp
